# resetprop-rs

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.gradle.kts  build.sh  deny.toml  rust-toolchain.toml  settings.gradle.kts  stress_test.sh
.cargo/: config.toml
.context/: .gitignore  AGENT-START.md  CHECKPOINT.md  history.md  ledger.yaml
.githooks/: pre-commit  pre-push
.github/workflows/: build.yml  ci.yml  release.yml
bucket/resetprop-rs-injectrc-ports/: AUDIT-FOLLOWUP.md  PLAN.md  progress.yml
bucket/resetprop-rs-injectrc-ports/tasks/: T01-fix-defect-a-advance-walker.yaml  T02-fix-bootstrap-page-leak.yaml  T03-m1-init-identity-guard.yaml  T04-m2-verify-after-write.yaml  T05-r1-spurious-stop-tolerance.yaml  T06-r2-on-device-tier-b-gate.yaml  T07-m3-dry-run-check-mode.yaml  T08-m4-r3-install-throttle.yaml  T09-port1-memfd-setfilecon.yaml  T10-port2-kmsg-snoop.yaml  T11-port3-gnu-debugdata-fallback.yaml  T19-revert-lzma.yaml  (+7 more)
build-logic/: build.gradle.kts  settings.gradle.kts
config/detekt/: detekt.yml
config/license/: allowed-licenses.json
crates/propdetect/: Cargo.toml
crates/propdetect-bionic/: Cargo.toml
crates/propdetect/src/: heuristics.rs  lib.rs  main.rs  snapshot.rs
crates/propdetect/tests/: detect_manipulation.rs
crates/resetprop/: Cargo.toml  README.md
crates/resetprop-cli/: Cargo.toml
crates/resetprop-cli/src/: main.rs
crates/resetprop/src/: appcompat.rs  area.rs  bionic.rs  compact.rs  context.rs  dict.rs  error.rs  harvest.rs  info.rs  inspect.rs  lib.rs  mock.rs  trie.rs  wait.rs
crates/resetprop/src/persist/: io.rs  mod.rs  proto.rs
crates/resetprop/src/seal/: arena.rs  elf.rs  hook.rs  kmsg_observer.rs  maps.rs  mod.rs  ptrace.rs  selinux.rs  xz_decoder.rs
crates/resetprop/src/seal/oracle/: hook_body.s
crates/resetprop/src/seal/ptrace/arch/: aarch64.rs  arm.rs  mod.rs  riscv64.rs  x86.rs  x86_64.rs
crates/resetprop/tests/: elf_fixture_smoke.rs  ptrace_core_smoke.rs  ptrace_core_smoke_arm.rs  ptrace_core_smoke_x86.rs  ptrace_core_smoke_x86_64.rs  tier_a_child_smoke.rs  tier_b_child_smoke.rs
crates/resetprop/tests/fixtures/elf_fixture/: Cargo.toml
crates/resetprop/tests/fixtures/elf_fixture/src/: lib.rs
gradle/: dependency-guard.config  libs.versions.toml
phases/seal/: P01-foundation.md  P02-tier-a.md  P03-tier-b-part1.md  P04-tier-b-part2.md  P05-cli-docs.md  REGISTRY-P.md  SESSION-01-HANDOFF.md  SESSION-02-HANDOFF.md
planning/: SOURCES.md
scripts/: comment-hygiene.py
tests/: device-stress-test.sh
(+19 files in other folders)
