[workspace]
resolver = "2"
members = ["crates/resetprop", "crates/resetprop-cli", "crates/propdetect", "crates/propdetect-bionic", "crates/resetprop/tests/fixtures/elf_fixture"]
exclude = ["propdetect-app/native"]

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
strip = true
codegen-units = 1
