[package]
name = "propdetect"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Adversarial property manipulation detector for Android"
repository = "https://github.com/Enginex0/resetprop-rs"

[[bin]]
name = "propdetect"
path = "src/main.rs"

[lib]
name = "propdetect"
path = "src/lib.rs"

[dependencies]
resetprop = { path = "../resetprop" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
