[package]
name = "resetprop"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "Pure Rust Android property area manipulation: get, set, stealth, nuke, delete, hexpatch, compact, seal"
repository = "https://github.com/Enginex0/resetprop-rs"
homepage = "https://github.com/Enginex0/resetprop-rs"
readme = "README.md"
keywords = ["android", "properties", "system-properties", "resetprop", "root"]
categories = ["os::unix-apis"]

[dependencies]
libc = "0.2"
# Second runtime dep, accepted per plan: pure-Rust XZ decode for `.gnu_debugdata`.
lzma-rs = "0.3"

[dev-dependencies]
tempfile = "3"
